--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -18,17 +18,9 @@ jobs:
       uses: classroom-resources/autograding-io-grader@v1
       with:
         test-name: test0
-        setup-command: 'notepad divisors.py'
+        setup-command: ''
         command: python divisors.py 100
-        input: 'import sys
-
-number = int(sys.argv[1])
-
-for i in number:
-if number%i == 0:
-print(i, end=" ")
-
-print()'
+        input: ''
         expected-output: 1 2 4 5 10 20 25 50 100
         comparison-method: contains
         timeout: 10
